feat: update API to use X-Bot-Token authentication
- Switch from JWT to X-Bot-Token authentication
- Add mock data fallback for testing
- Update configuration files
- Test API connection and report generation

--- a/env.example
+++ b/env.example
@@ -2,12 +2,11 @@ BOT_TOKEN=000000:xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 REPORT_CHAT_ID=-1000000000000           # ID группы для отчётов
 TECH_CHAT_ID=-1000000000001             # тех-чат для ошибок (можно = REPORT_CHAT_ID)
 
-API_BASE_URL=http://localhost:8000
+API_BASE_URL=https://your_api_base_url_here.com
 API_REPORT_DAILY=/api/reports/daily/
 API_REPORT_RANGE=/api/reports/range/
 API_HEALTH=/api/reports/health/
-API_USERNAME=1
-API_PASSWORD=1
+API_BOT_TOKEN=bot_your_bot_token_here
 
 TZ=Asia/Tashkent
 HTTP_TIMEOUT=20
