feat: add admin restrictions and safe deployment
- Restrict /ping and /report commands to admins only
- Add ADMIN_IDS configuration
- Create safe deployment script
- Add deployment documentation
- Only /start command available for regular users

--- a/env.example
+++ b/env.example
@@ -1,6 +1,7 @@
 BOT_TOKEN=000000:xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 REPORT_CHAT_ID=-1000000000000           # ID группы для отчётов
 TECH_CHAT_ID=-1000000000001             # тех-чат для ошибок (можно = REPORT_CHAT_ID)
+ADMIN_IDS=123456789,987654321           # ID админов через запятую
 
 API_BASE_URL=https://your_api_base_url_here.com
 API_REPORT_DAILY=/api/reports/daily/
